[package]
name = "strchunk"
version = "0.4.0"
edition = "2018"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
description = "Data types for working with UTF-8 text in I/O"
repository = "https://github.com/mzabaluev/strchunk"
readme = "README.md"
license = "MIT"
keywords = ["io", "zero-copy", "buffers", "strings", "unicode"]
categories = ["data-structures", "network-programming"]

[features]
unstable = ["specialization"]
specialization = []

[dependencies]
bytes = "1.1"
range-split = { version = "0.4", features = ["bytes"] }

[dev-dependencies]
futures = "0.3"
tokio = { version = "1.1", features = ["io-std", "io-util", "rt-multi-thread", "macros"] }
